<resources>
    <string name="app_name">PruebaSuperHeroes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_combat">Combat:</string>
    <string name="label_power">Power:</string>
    <string name="label_durability">Durability:</string>
    <string name="label_speed">Speed:</string>
    <string name="label_strength">Strength:</string>
    <string name="label_intelligence">Intelligence:</string>
</resources>
